--- a/src/Pages/MainPage/Main.css
+++ b/src/Pages/MainPage/Main.css
@@ -4,8 +4,8 @@
 }
 
 #bg-video {
-  margin-top: 50px;
-  margin-bottom: 150px;
+  margin-top: -23px;
+  margin-bottom: -4px;
   object-fit: cover;
   width: 100%;
   height: 100%;
@@ -56,13 +56,13 @@
   align-items: center;
 }
   .overlay {
-  position: fixed;
-  top:0;
+  position: absolute;
+  top: 67px;
   left: 0;
   right: 0;
-  bottom: 0;
+  bottom: 100px;
   width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  height: 119%;
+  background-color: rgba(0, 15, 0, 0.4);
   cursor: pointer;
 }  
