--- a/src/Pages/Bullboard/adsPage.css
+++ b/src/Pages/Bullboard/adsPage.css
@@ -1,8 +1,10 @@
-
+/* .adsPageContainer {
+     background-image: url(../../assets/woodenBackground.jpg);   
+} */
 .adsLayer{
     display: flex;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
+    /* background-color: rgba(0, 0, 0, 0.4); */
 }
 .leftBar{
     flex: 2.5;
