--- a/src/Pages/ShowFarmerProfile/intro.css
+++ b/src/Pages/ShowFarmerProfile/intro.css
@@ -2,7 +2,9 @@
     display: flex;
     height: 100vh;
     direction: rtl;
+    zoom: 80%;
 }
+
 
 .i-right{
     flex: 3;
@@ -42,6 +44,7 @@
     padding-bottom: 100px;
     height: 100%;
     animation: move 10s ease-in-out infinite alternate;
+    
 }
 
 @keyframes move {
@@ -66,6 +69,7 @@
     color: #59b256;
     display: flex;
     align-items: center;
+
 }
 
 .i-desc{
