--- a/frontend/src/Pages/ourfarmers/styles.css
+++ b/frontend/src/Pages/ourfarmers/styles.css
@@ -1,35 +1,34 @@
-
-
 .catalogue-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .card-grid {
-    display: flex;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    gap: 20px;
-    margin-top: 20px;
-  }
-  
-  .pagination {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-  }
-  
-  .page-number {
-    border: none;
-    background: none;
-    color: #000;
-    padding: 5px 10px;
-    margin: 0 5px;
-    cursor: pointer;
-  }
-  
-  .page-number.active {
-    color: #fff;
-    background-color: #000;
-    border-radius: 5px;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); 
+  gap: 20px;
+  margin-top: 20px;
+  justify-content: right;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.page-number {
+  border: none;
+  background: none;
+  color: #000;
+  padding: 5px 10px;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+.page-number.active {
+  color: #fff;
+  background-color: #000;
+  border-radius: 5px;
+}
