updated for milestone 2

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,7 +6,7 @@
 }
 
 body{
-  background: #fff3e0;  /* fallback for old browsers */
+  background: #f7f1e5;  /* fallback for old browsers */
  
 }
 
