--- a/frontend/src/Pages/Bullboard/adsPage.css
+++ b/frontend/src/Pages/Bullboard/adsPage.css
@@ -4,6 +4,7 @@
 .adsLayer{
     display: flex;
     width: 100%;
+    height: 100vh;
     /* background-color: rgba(0, 0, 0, 0.4); */
 }
 .leftBar{
@@ -12,10 +13,17 @@
 
 .rightbar{
     flex: 2.5;
+    height: 100vh;
+    overflow-y: auto;
 }
+
+/* ::-webkit-scrollbar{
+    display: none;
+} */
 
 .board{
     flex: 5;
+    overflow-y: scroll;
 }
 .adPageWrapper{
     padding: 20px;
@@ -28,4 +36,12 @@
 .addPostWrapper{
     z-index: 5;
     direction: rtl;
+}
+
+.rightbar::-webkit-scrollbar {
+    display: none;
+}
+
+.board::-webkit-scrollbar {
+    display: none;
 }
