--- a/frontend/src/Pages/ourfarmers/searchbarstyles.css
+++ b/frontend/src/Pages/ourfarmers/searchbarstyles.css
@@ -2,16 +2,19 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.26);
+    /* border-bottom: 2px solid rgba(0, 0, 0, 0.26); */
     padding: 1.5rem 1rem;
+    direction: rtl;
   }
   
   .searchbar_input_wrapper {
+    flex: 4;
     display: flex;
     align-items: center;
     background-color: white;
     border-radius: 20px;
     padding: 0.5rem;
+    width: 100%;
   }
   
   .searchbar_input_wrapper.glow {
