--- a/frontend/src/Pages/ourfarmers/styles.css
+++ b/frontend/src/Pages/ourfarmers/styles.css
@@ -1,3 +1,7 @@
+.mainWrapper{
+  display: flex;
+}
+
 .catalogue-container {
   display: flex;
   flex-direction: column;
@@ -6,10 +10,11 @@
 
 .card-grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr); 
+  grid-template-columns: repeat(3, 1fr); 
   gap: 20px;
   margin-top: 20px;
   justify-content: right;
+  /* color: #fff; */
 }
 
 .pagination {
@@ -32,3 +37,4 @@
   background-color: #000;
   border-radius: 5px;
 }
+
