--- a/frontend/src/Pages/MainPage/Main.css
+++ b/frontend/src/Pages/MainPage/Main.css
@@ -89,8 +89,9 @@
   left: 0;
   right: 0;
   bottom: 0px;
-  width: 100%;
-  height: 105%;
+  width: 100% !important;
+  height: 109vh !important;
+  overflow: hidden;
   background-color: rgba(19, 33, 19, 0.4);
   cursor: pointer;
 }  
@@ -112,4 +113,40 @@
   bottom: 550px;
   width: 100%;
   cursor: pointer;
+}
+
+.hero {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.newOverlay {
+  background-color: rgba(0,0,0,0.3);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: -2%;
+  left: 0;
+  z-index: -1;
+}
+
+#video {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  z-index: -2;
+}
+
+.hero .content {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: auto;
+  padding: 1rem;
+  direction: rtl;
 }
