--- a/frontend/src/Pages/ourfarmers/searchbarstyles.css
+++ b/frontend/src/Pages/ourfarmers/searchbarstyles.css
@@ -3,8 +3,8 @@
     align-items: center;
     justify-content: center;
     /* border-bottom: 2px solid rgba(0, 0, 0, 0.26); */
-    padding: 1.5rem 1rem;
-    direction: rtl;
+    padding: 1rem 0rem;
+   width: 70%;
   }
   
   .searchbar_input_wrapper {
