--- a/frontend/src/Pages/ourfarmers/styles.css
+++ b/frontend/src/Pages/ourfarmers/styles.css
@@ -38,3 +38,25 @@
   border-radius: 5px;
 }
 
+.noResultsImage{
+  position: center;
+  width: 400px;
+  height: 280px;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+@media(max-width: 900px) {
+  .card-grid {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 20px;
+    align-items: center;
+    justify-content:center;
+    /* color: #fff; */
+  }
+}
