--- a/frontend/src/Pages/Bullboard/adsPage.css
+++ b/frontend/src/Pages/Bullboard/adsPage.css
@@ -11,27 +11,30 @@
     flex: 2.5;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
   
     .leftBar {
       flex: 0; /* Disable left bar */
     }
-  
     .rightbar {
       flex: 1; /* Take full width for narrow screens */
     }
-  }
+}
 
-  @media screen and (max-width: 400px) {
-  
+@media screen and (max-width: 700px) {
+    .rightbar {
+      max-width: 33.33%; /* Limit the maximum width to 1/3 */
+    }
+}
 
+@media screen and (max-width: 400px) {
   
     .rightbar {
       flex: 0; /* disable right bar */
       height: 0vh;
       display: none;
     }
-  }
+}
 
 .rightbar{
     flex: 2.5;
