fixed a few things

--- a/frontend/src/Pages/Bullboard/adsPage.css
+++ b/frontend/src/Pages/Bullboard/adsPage.css
@@ -52,9 +52,10 @@
 .board{
     flex: 5;
     overflow-y: scroll;
+    padding-left: 20%;
 }
 .adPageWrapper{
-    padding: 20px;
+    /* padding: 20px; */
 }
 
 .boardWrapper {
@@ -76,3 +77,8 @@
 .board::-webkit-scrollbar {
     display: none;
 }
+
+.noResultsImage{
+    position: center;
+    width: 100%;
+  }
