--- a/frontend/src/components/Post/newBusinessCard.css
+++ b/frontend/src/components/Post/newBusinessCard.css
@@ -58,6 +58,7 @@
     gap: 1em;
     padding-left: 4vw;
     padding-right: 4vw;
+    padding-bottom: 0;
 }
 
 .profileImage {
@@ -85,7 +86,9 @@
     flex-direction: column;
     /* align-items: center; */
     align-content: center;
-    padding: 5em;
+    padding-right: 5em;
+    padding-left: 5em;
+    padding-top: 2em;
 }
 
 .about {
@@ -94,23 +97,24 @@
 }
 
 .drawerContainer {
+    padding-top: 0;
     display: flex;
     flex-direction: column;
-    margin-bottom: 5em;
+    margin-bottom: 5rem;
 }
 
 .placeImages {
     width: 100%;
     height: 40vh;
     object-fit: cover;
-    margin-bottom: 5em;
+    margin-bottom: 8rem;
 }
 
 .productsImages {
     width: 100%;
     height: 40vh;
     object-fit: cover;
-    margin-bottom: 5em;
+    margin-bottom: 8rem;
 }
 
 .userPosts {
