--- a/frontend/src/Pages/Bullboard/adsPage.css
+++ b/frontend/src/Pages/Bullboard/adsPage.css
@@ -11,33 +11,17 @@
     flex: 2.5;
 }
 
-@media screen and (max-width: 900px) {
-  
-    .leftBar {
-      flex: 0; /* Disable left bar */
-    }
-    .rightbar {
-      flex: 1; /* Take full width for narrow screens */
-    }
-}
 
 @media screen and (max-width: 700px) {
     .rightbar {
-      max-width: 33.33%; /* Limit the maximum width to 1/3 */
+      max-width: 33.33%;  /* Limit the maximum width to 1/3 */
     }
 }
 
-@media screen and (max-width: 400px) {
-  
-    .rightbar {
-      flex: 0; /* disable right bar */
-      height: 0vh;
-      display: none;
-    }
-}
+
 
 .rightbar{
-    flex: 2.5;
+    flex: 1.5;
 }
 
 .adsFilter {
@@ -45,18 +29,16 @@
     overflow-y: auto;
 }
 
-/* ::-webkit-scrollbar{
+.adsLayer::-webkit-scrollbar{
     display: none;
-} */
+}
 
 .board{
-    flex: 5;
+    flex: 4;
     overflow-y: scroll;
     padding-left: 20%;
 }
-.adPageWrapper{
-    /* padding: 20px; */
-}
+
 
 .boardWrapper {
     padding: 20px;
