--- a/frontend/src/Pages/FAQ/FAQ.module.css
+++ b/frontend/src/Pages/FAQ/FAQ.module.css
@@ -29,6 +29,7 @@ code {
 	padding-right: 0px;
 	padding-left: 50px;
 	transition: all 0.4s ease;
+	cursor: pointer;
 }
 
 .faqs .faq .faq-question::after {
@@ -53,6 +54,7 @@ code {
 	max-height: 0;
 	overflow-y: hidden;
 	transition: all 0.4s ease-out;
+	cursor: pointer;
 }
 
 .faqs .faq.open .faq-question {
