--- a/frontend/src/Pages/FAQ/FAQ.module.css
+++ b/frontend/src/Pages/FAQ/FAQ.module.css
@@ -69,3 +69,11 @@ code {
 	max-height: 1000px;
 	opacity: 1;
 }
+
+
+.sectionTitle {
+    font-size: 1.7rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+	color: #fff3e0;
+}
