--- a/frontend/src/Pages/FAQ/FAQ.module.css
+++ b/frontend/src/Pages/FAQ/FAQ.module.css
@@ -30,6 +30,7 @@ code {
 	padding-left: 50px;
 	transition: all 0.4s ease;
 	cursor: pointer;
+	font-family: 'aleph';
 }
 
 .faqs .faq .faq-question::after {
@@ -55,6 +56,8 @@ code {
 	overflow-y: hidden;
 	transition: all 0.4s ease-out;
 	cursor: pointer;
+	font-family: 'aleph';
+
 }
 
 .faqs .faq.open .faq-question {
@@ -70,10 +73,21 @@ code {
 	opacity: 1;
 }
 
-
 .sectionTitle {
     font-size: 1.7rem;
     font-weight: bold;
     margin-bottom: 1rem;
 	color: #fff3e0;
+	font-family: 'aleph';
+
 }
+
+/* hebrew */
+@font-face {
+	font-family: 'aleph';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/varelaround/v20/w8gdH283Tvk__Lua32TysjIfpcuPLdshZhVB.woff2) format('woff2');
+	unicode-range: U+0590-05FF, U+200C-2010, U+20AA, U+25CC, U+FB1D-FB4F;
+  }
