--- a/frontend/src/Pages/FAQ/FAQ.module.css
+++ b/frontend/src/Pages/FAQ/FAQ.module.css
@@ -37,7 +37,7 @@ code {
 	content: '';
 	position: absolute;
 	top: 50%;
-	right: 93.5%;
+	right: 94.5%;
 	transform: translateY(-50%);
 	width: 30px;
 	height: 30px;
@@ -77,7 +77,7 @@ code {
     font-size: 1.7rem;
     font-weight: bold;
     margin-bottom: 1rem;
-	color: #fff3e0;
+	color: #ffb74d;
 	font-family: 'aleph';
 
 }
