--- a/frontend/src/Pages/FAQ/FAQ.module.css
+++ b/frontend/src/Pages/FAQ/FAQ.module.css
@@ -77,7 +77,7 @@ code {
     font-size: 1.7rem;
     font-weight: bold;
     margin-bottom: 1rem;
-	color: #ffb74d;
+	color: #1d3c45;
 	font-family: 'aleph';
 
 }
