--- a/frontend/src/components/Post/newBusinessCard.css
+++ b/frontend/src/components/Post/newBusinessCard.css
@@ -52,6 +52,44 @@
     }
 }
 
+@media(max-height: 600px) {
+    .center {
+        display: flex;
+        flex-direction: column;
+        /* align-items: center; */
+        align-content: center;
+        padding-top: 2em;
+    }
+}
+
+@media (max-width: 700px) {
+  .center {
+    padding-right: 2.5em !important;
+    padding-left: 2.5em !important;
+  }
+}
+
+@media (max-width: 500px) {
+  .center {
+    padding-right: 1em !important;
+    padding-left: 1em !important;
+  }
+}
+
+@media (max-width: 430px) {
+  .center {
+    padding-right: 0.1em !important;
+    padding-left: 0.1em !important;
+  }
+}
+
+@media (max-width: 400px) {
+    .userPosts,
+    .userPostsTypography {
+      display: none;
+    }
+  }
+
 .top {
     display: flex;
     justify-content: space-between;
@@ -84,7 +122,6 @@
 .center {
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
     align-content: center;
     padding-right: 5em;
     padding-left: 5em;
