--- a/frontend/src/components/Post/post.css
+++ b/frontend/src/components/Post/post.css
@@ -19,6 +19,10 @@
     margin: 0 10px;
 }
 
+.postDate {
+    white-space: nowrap;
+}
+
 a:link, a:visited {
     color: black;
     text-decoration: none;
