--- a/frontend/src/Pages/Bullboard/adsPage.css
+++ b/frontend/src/Pages/Bullboard/adsPage.css
@@ -8,6 +8,23 @@
     flex: 2.5;
 }
 
+.loadingSpinner{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    max-width: 700px; 
+    margin-bottom: 1rem;
+    position: center;
+    padding-left: 200px;
+  }
+
+  @media screen and (max-width: 900px) {
+    .loadingSpinner{
+        padding-left: 40px !important;
+    }
+}
 
 @media screen and (max-width: 700px) {
     .rightbar {
@@ -16,17 +33,24 @@
     .noResults {
         padding-top: 20% !important;
     }
+    .loadingSpinner{
+        padding-left: 20px !important;
+    }
 }
 
 @media screen and (max-width: 480px) {
     .noResults {
         padding-top: 35% !important;
     }
+
 }
 
 @media screen and (max-width: 400px) {
     .noResults {
         padding-top: 75% !important;
+    }
+    .loadingSpinner{
+        padding-left: 10px !important;
     }
 }
 
