--- a/frontend/src/Pages/Bullboard/adsPage.css
+++ b/frontend/src/Pages/Bullboard/adsPage.css
@@ -45,6 +45,16 @@
 
 }
 
+@media screen and (max-width: 420px) and (max-height: 920px) {
+    .board{
+        padding-left: 0px !important;
+    }
+
+    .board.flex-center {
+        padding-left: 0px !important;
+    }
+}
+
 @media screen and (max-width: 400px) {
     .noResults {
         padding-top: 75% !important;
@@ -78,7 +88,7 @@
     flex: 4;
     overflow-y: scroll;
     padding-left: 20%;
-  }
+}
 
 
 .boardWrapper {
