--- a/frontend/src/Pages/Settings/userPosts.css
+++ b/frontend/src/Pages/Settings/userPosts.css
@@ -8,6 +8,6 @@ posts::-webkit-scrollbar {
 }
 
 .posts{
-    border: 5px solid #1d3c45;
+    /* border: 5px solid #1d3c45; */
     direction: ltr;
 }
